remove duplicates from the timezone prefs so now only no longer can you see duplicate timescales (by timezone). also the list of selected timezones is deduped in the listwidget in the dialog.

BUG: 285118
FIXED-IN: 4.8.0